trunk/Archive2/bf/8c136996f85060/main.cpp
namespace N { namespace A {int i;} }

struct A {static int i;};

using namespace N;

int i = A::i;

int main() {}